# context-cache-cli

./: .context-cache.json  .gitattributes  .gitignore  .prettierignore  README.md  biome.json  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: pr-guardrails.yml  release.yml  smoke.yml
.husky/: pre-push
scripts/: copy-binding.js
src/: index.ts
src/constants/core/: constants.ts
src/features/context-cache/components/mcp/: server.ts  tools.ts
src/features/context-cache/constants/core/: feature.constants.ts
src/features/context-cache/lib/runtime/: setup.ts  watch.ts
src/features/context-cache/utils/core/: parity.ts  symbols.ts
src/lib/rust/: Cargo.toml
src/lib/rust/src/: cache.rs  config.rs  graph_napi.rs  hasher.rs  lib.rs  summarize.rs  walker.rs
src/lib/rust/src/graph/: build.rs  community.rs  detect.rs  embed.rs  mod.rs  query.rs  refactor.rs  registry.rs  schema.rs  types.rs  wiki.rs
src/lib/rust/src/graph/parser/: fallback.rs  language.rs  mod.rs  preprocess.rs  tests.rs  types.rs  utils.rs
src/lib/rust/src/graph/parser/ast/: classify.rs  extract.rs  mod.rs  traversal.rs
src/utils/core/: files.ts  repo.ts
tests/: cli.commands.contract.test.js  incremental-build.contract.test.js  mcp-tools.contract.test.js
